--- a/app/templates/reserve.html
+++ b/app/templates/reserve.html
@@ -72,8 +72,29 @@
             <input type="hidden" name="check_out_date" value="{{check_out_date}}" />
             <input type="hidden" name="check_out_date" value="{{check_out_date}}" />
             <input type="hidden" name="num_occupants" value="{{num_occupants}}" />
-            <input type="submit" class="reserve-book-button" />
+            <input type="button" value="+" class="reserve-book-button" data-toggle="modal" data-target="#exampleModalCenter"/>
+            <input type="submit" class="reserve-book-button" value="Book" />
         </form>
+    </div>
+</div>
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Payment Methods</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="payment-method-modal">
+                <form>
+                    <input type="submit" value="●●●● ●●●● ●●●● 0192" class="payment-method-button"/>
+                    <input type="submit" value="●●●● ●●●● ●●●● 7930" class="payment-method-button"/>
+                    <input type="submit" value="+" class="payment-method-button"/>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
