--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -56,8 +56,8 @@
                         <div class="card-body">
                             <form action="", method="POST">
                                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                                <input type="submit" class="profile-options-input" value="●●●● ●●●● ●●●● 0192"/>
-                                <input type="submit" class="profile-options-input" value="●●●● ●●●● ●●●● 7930"/>
+                                <label class="profile-options-input text-align-center">●●●● ●●●● ●●●● 0192</label>
+                                <label class="profile-options-input text-align-center">●●●● ●●●● ●●●● 7930</label>
                                 <label style="margin-left: 1em;">Add new payment method</label>
                                 <input type="text" name="nameoncard" class="profile-options-input" placeholder="Name on card"/>
                                 <input type="text" name="cardnumber" class="profile-options-input" placeholder="Card number"/>
