--- a/app/templates/contactus.html
+++ b/app/templates/contactus.html
@@ -36,7 +36,7 @@
 
         var es_es = {
             contactus: "Contácte con nosotros",
-            inputemail: "Dirección electrónica",
+            inputemail: "Dirección de correo electrónico",
             inputsubject: "Tema",
             textareamessage: "Mensaje",
             contactussubmit: "Enviar",
